# hft-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: core-ci.yml
bench/: bench_clock.cpp  bench_feed.cpp  bench_util.hpp
dead/: README.md
dead/include/hft/: feed_handler.hpp
dead/src/: feed_handler.cpp
dead/tests/: test_feed_handler.cpp
dead/tools/: capture_feed.cpp
docs/: ARCHITECTURE.md  architecture.html  execution-simulator.md  feed-handler.md  interview-prep.md  latency-harness.md  order-book.md  order-gateway.md  ring-buffer.md  risk.md  strategy.md  threading.md  types.md
include/hft/: feed_handler.hpp  orderbook.hpp  platform.hpp  ref_index.hpp  types.hpp
src/: feed_handler.cpp  orderbook.cpp  platform.cpp  ref_index.cpp
tests/: test_feed_handler.cpp  test_orderbook.cpp  test_platform.cpp  test_ref_index.cpp  test_smoke.cpp
